Add icon in input

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -6,22 +6,17 @@ body {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  border: none;
+  padding: 0;
+  background: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
+  position: relative;
+  top: 3px;
+  right: 17px;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none;
 }
 
 #Title {
@@ -32,4 +27,9 @@ button:focus-visible {
 
 #UserInput {
   display: inline-block;
+}
+
+#SearchIcon {
+  display: inline;
+  position: relative;
 }
