--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -19,6 +19,16 @@ button:focus-visible {
   outline: none;
 }
 
+header {
+  background-color: #2c3e50;
+  width: 100%;
+  position: fixed;
+}
+
+#HeaderTitle {
+  color: #ffffff;
+}
+
 #Title {
   display: inline-block;
   margin: 15px 0px 0px 80px;
@@ -27,6 +37,7 @@ button:focus-visible {
 
 #UserInput {
   display: inline-block;
+  margin-bottom: 15px;
 }
 
 #SearchIcon {
