--- a/src/components/WeatherResult/styles.css
+++ b/src/components/WeatherResult/styles.css
@@ -1,3 +1,12 @@
 #WeatherIcon {
   position: relative;
 }
+
+#DataResult {
+  position: relative;
+  padding-top: 120px;
+}
+
+p {
+  margin: 15px;
+}
