--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -19,6 +19,11 @@ button:focus-visible {
   outline: none;
 }
 
+input:focus,
+input:focus-visible {
+  outline: none;
+}
+
 header {
   background-color: #2c3e50;
   width: 100%;
