--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -26,7 +26,7 @@ input:focus-visible {
 header {
   background-color: #2c3e50;
   width: 100%;
-  position: fixed;
+  position: relative;
 }
 
 #HeaderTitle {
@@ -75,6 +75,7 @@ header {
   background-color: #f7f7f7;
   border-radius: 0 0 10px 10px;
   position: absolute;
+  top: 40px;
 }
 
 .suggestions li {
